# SalesPilot

./: Dockerfile  Taskfile.yml  docker-compose.yml  init_commands.txt  pyproject.toml  requirements.txt
k8s/: init_command  postgres-configmap.yaml  ps-deployment.yaml  psql-claim.yaml  psql-pv.yaml  sp-configmap.yaml  sp-deployment.yaml  sp-service.yaml
src/: config.py  run.py
src/adapters/: pyd_model.py
src/dbschema/: orm.py
src/domain/: events.py  model.py  services.py
src/entrypoints/: fastapi_app.py
src/repositories/: repository.py
src/service_layer/: messagebus.py  services.py  unit_of_work.py
src/services/: handlers.py  unit_of_work.py
tests/: conftest.py
tests/e2e/: test_api.py
tests/integration/: old_test_repository.py  test_orm.py  test_repository.py  test_uow.py
tests/unit/: test_handlers.py  test_product.py  test_services.py
