[project]
name = "hexapi"
version = "0.1.0"
description = "Ecommerce project with tdd, ddd and event-driven microservices based on hexagonal arch"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[all]>=0.115.11",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.28.0",
    "uvicorn>=0.27.0",
    "python-dotenv>=1.0.0",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = true
packages = [{include = "*", from = "src"}] # solve fast api error with module not found

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.2"
mypy = "^1.15.0"
isort = "^6.0.1"
black = "^25.1.0"
pytest = "^8.3.5"
pytest-asyncio = ">=0.24.0"
flake8 = "^7.0.0"
flake8-pyproject = "^1.2.3"
httpx = "^0.27.0"
aiosqlite = "^0.19.0"
go-task-bin = "^3.43.3"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
asyncio_default_test_loop_scope = "session"

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "E401"]
exclude = [".venv"]
per-file-ignores = ["__init__.py:F401"]

[tool.black]
line-length = 120
target-version = ["py312"]

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 120